added yesterday's post

--- a/content/posts/2020-02-14.md
+++ b/content/posts/2020-02-14.md
@@ -1,23 +1,15 @@
 ---
 title: "matthewninja today: Private Blog, Philosophy, Computer Vision, & VendorPM Onboarding"
-date: 2020-02-14
+date: 2020-02-14-passwords-vendorpm
 draft: true
 ---
 
 ## Private (serverless) Blog w/ Lambda@Edge
 I wanted to make a private blog post with some thoughts that I don't necessarily want to make public to the universe. I'm also on a student budget, and don't want to spin up a dedicated VM to serve pages behind a password. I found [this post](https://hackernoon.com/serverless-password-protecting-a-static-website-in-an-aws-s3-bucket-bfaaa01b8666) on serverless, password protected static pages by [lmakarov](https://github.com/lmakarov).
 
-## Philosophy
-My only two classes today were both Philosophy.
+Lambda@Edge allows one to use node.js or python Lambda functions through Cloudfront. If you're up to date with the serverless development environment, you might agree with me when I say that **serverless is the future**. I used a node.js for password-walling my secret blog.
 
-In the first class, Existentialism, we learned about Nietzsche and Nihilism.
-
-In the second class, Critical Thinking, we looked at inductive reasoning.
-
-## Computer Vision
-My assignment for my Computer Vision class is no joke. 
-
-The first part covers Convolutions. Seems easy enough.
+Visit my secret blog at [secret.matthewninja.com](https://secret.matthewninja.com). Password required. If you know, you know.
 
 ## VendorPM Onboarding
 I've been working for VendorPM remotely for 3 days now, since Wednesday. Today, I'm going into the office to be officially onboarded! Very excited.
