un-drafted post

--- a/content/posts/2020-02-14.md
+++ b/content/posts/2020-02-14.md
@@ -1,7 +1,7 @@
 ---
 title: "matthewninja today: Private Blog, Philosophy, Computer Vision, & VendorPM Onboarding"
 date: 2020-02-14-passwords-vendorpm
-draft: true
+draft: false
 ---
 
 ## Private (serverless) Blog w/ Lambda@Edge
