--- a/content/posts/2020.md
+++ b/content/posts/2020.md
@@ -16,7 +16,9 @@ The sheer extent of what she’s had to endure over the past ten years is incomp
 
 It’s a shame that neither of us had a formal graduation ceremony. Our graduation ceremonies would have been more meaningful than any celebration we’ve ever had. We were going to celebrate our graduation and then have an extended vacation in Korea. We had our plane tickets and everything. Fuck Covid. I’ve got vacation days in the bank, and we’re still hoping to make that trip happen. 🤞
 
-Being the sole engineer at a start-up with a multi-million-dollar valuation forces you to grow up a bit. When investors are booked for a demo a week from today, and nobody can make it happen except for you, you have no choice but excellence. Putting that much pressure on an individual is a sure-fire way to sharpen them up. And I’ve learned so many lessons from this experience. Many lessons were learned. Some are obvious, but some aren’t. The obvious lessons include waking up and staying healthy to maintain peak performance. But a less obvious lesson that I learned was not to hire your friends. When the project is enormous enough that you need to hire help, you should hire to actually help–not just the top people on your LinkedIn that took one programming course. I hired 7 engineers and fired 6.
+## Growing up
+
+Being the sole engineer at a start-up with a multi-million-dollar valuation forces you to grow up a bit. When investors are booked for a demo a week from today, and nobody can make it happen except for you, you have no choice but excellence. Putting that much pressure on an individual is a sure-fire way to sharpen them up. And I’ve learned so many lessons from this experience. Some are obvious, but a lot aren’t. One obvious lessons is that you should wake up and stay healthy to maintain peak performance. But a less obvious lesson that I learned was not to hire your friends. When the project is enormous enough that you need to hire help, you should hire to actually help–not just the top people on your LinkedIn that took one programming course. I hired 7 engineers and fired 6.
 
 ## New Tech
 
