--- a/content/posts/2020.md
+++ b/content/posts/2020.md
@@ -10,7 +10,7 @@ Wow. 2020 has been a journey. My first thought, strangely, is that I don't truly
 
 ## Graduation
 
-My mother isn’t easily excited. She isn’t materialistic. She doesn’t care for big house, fancy car, or designed clothes. But one thing that she has been anticipating for decades is for me and my brother to graduate and get “real jobs.” Indeed, my brother and I both graduated this year. My brother now has a degree in mechanical engineering and is working towards his P. Eng, while I can now call myself a computer scientist.
+My mother isn’t easily excited. She isn’t materialistic. She doesn’t care for a big house, a fancy car, or designed clothes. But one thing that she has been anticipating for decades is for me and my brother to graduate and get “real jobs.” Indeed, my brother and I both graduated this year. My brother now has a degree in mechanical engineering and is working towards his P. Eng, while I can now call myself a computer scientist.
 
 The sheer extent of what she’s had to endure over the past ten years is incomprehensible.
 
