--- a/content/posts/2020.md
+++ b/content/posts/2020.md
@@ -38,4 +38,4 @@ Working from home is good and bad. It’s great because your commute is reduced 
 
 ## Happy New Year
 
-Thanks for reading my blog. 2020 was rough. Here’s to a very, very different 2021.
+Thanks for reading my blog. 2020 was rough, yet great. Here’s to a very, very different 2021.
