--- a/content/posts/2020.md
+++ b/content/posts/2020.md
@@ -18,7 +18,7 @@ It’s a shame that neither of us had a formal graduation ceremony. Our graduati
 
 ## Growing up
 
-Being the sole engineer at a start-up with a multi-million-dollar valuation forces you to grow up a bit. When investors are booked for a demo a week from today, and nobody can make it happen except for you, you have no choice but excellence. Putting that much pressure on an individual is a sure-fire way to sharpen them up. And I’ve learned so many lessons from this experience. Some are obvious, but a lot aren’t. One obvious lessons is that you should wake up and stay healthy to maintain peak performance. But a less obvious lesson that I learned was not to hire your friends. When the project is enormous enough that you need to hire help, you should hire to actually help–not just the top people on your LinkedIn that took one programming course. I hired 7 engineers and fired 6.
+Being the sole engineer at a start-up with a multi-million-dollar valuation forces you to grow up a bit. When investors are booked for a demo a week from today, and nobody can make it happen except for you, you have no choice but excellence. Putting that much pressure on an individual is a sure-fire way to sharpen them up. And I’ve learned so many lessons from this experience. Some are obvious, but a lot aren’t. One obvious lesson is that you should wake up and stay healthy to maintain peak performance. But a less obvious lesson that I learned was not to hire your friends. When the project is enormous enough that you need to hire help, you should hire to actually help–not just the top people on your LinkedIn that took one programming course. I hired 7 engineers and fired 6.
 
 ## New Tech
 
